// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Persists to/from file autoLoads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4033596827,
]
`;

exports[`Persists to/from file autoLoads 2`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  2,
                  2669080357,
                ],
              },
              274319047,
            ],
          },
          4089057354,
        ],
      },
      3386696034,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3386696034,
]
`;

exports[`Persists to/from file autoLoads 3`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from file autoLoads 4`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from file autoSaves 1`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  2133326328,
]
`;

exports[`Persists to/from file autoSaves 2`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1640274386,
            ],
          },
          1505695335,
        ],
      },
      2105713602,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  4073625505,
]
`;

exports[`Persists to/from file autoSaves 3`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1640274386,
            ],
          },
          1505695335,
        ],
      },
      2105713602,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  4073625505,
]
`;

exports[`Persists to/from file autoSaves 4`] = `
[
  "Hc2DO@200008DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1640274386,
            ],
          },
          1505695335,
        ],
      },
      2105713602,
    ],
    [
      "Hc2DO@200008DKS9",
      {
        "v1": [
          "Hc2DO@200008DKS9",
          2,
          1735757618,
        ],
      },
      1614015778,
    ],
  ],
  498159328,
]
`;

exports[`Persists to/from file autoSaves without race 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4033596827,
]
`;

exports[`Persists to/from file autoSaves without race 2`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from file loads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from file saves 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from file saves 2`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from localStorage autoLoads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4033596827,
]
`;

exports[`Persists to/from localStorage autoLoads 2`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  2,
                  2669080357,
                ],
              },
              274319047,
            ],
          },
          4089057354,
        ],
      },
      3386696034,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3386696034,
]
`;

exports[`Persists to/from localStorage autoLoads 3`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from localStorage autoLoads 4`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from localStorage autoSaves 1`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  2133326328,
]
`;

exports[`Persists to/from localStorage autoSaves 2`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1640274386,
            ],
          },
          1505695335,
        ],
      },
      2105713602,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  4073625505,
]
`;

exports[`Persists to/from localStorage autoSaves 3`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1640274386,
            ],
          },
          1505695335,
        ],
      },
      2105713602,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  4073625505,
]
`;

exports[`Persists to/from localStorage autoSaves 4`] = `
[
  "Hc2DO@200008DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1640274386,
            ],
          },
          1505695335,
        ],
      },
      2105713602,
    ],
    [
      "Hc2DO@200008DKS9",
      {
        "v1": [
          "Hc2DO@200008DKS9",
          2,
          1735757618,
        ],
      },
      1614015778,
    ],
  ],
  498159328,
]
`;

exports[`Persists to/from localStorage loads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from localStorage saves 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from localStorage saves 2`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoLoads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4033596827,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoLoads 2`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  2,
                  2669080357,
                ],
              },
              274319047,
            ],
          },
          4089057354,
        ],
      },
      3386696034,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3386696034,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoLoads 3`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoLoads 4`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoSaves 1`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  2133326328,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoSaves 2`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1640274386,
            ],
          },
          1505695335,
        ],
      },
      2105713602,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  4073625505,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoSaves 3`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1640274386,
            ],
          },
          1505695335,
        ],
      },
      2105713602,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  4073625505,
]
`;

exports[`Persists to/from mockMergeableChangesListener autoSaves 4`] = `
[
  "Hc2DO@200008DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1640274386,
            ],
          },
          1505695335,
        ],
      },
      2105713602,
    ],
    [
      "Hc2DO@200008DKS9",
      {
        "v1": [
          "Hc2DO@200008DKS9",
          2,
          1735757618,
        ],
      },
      1614015778,
    ],
  ],
  498159328,
]
`;

exports[`Persists to/from mockMergeableChangesListener loads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from mockMergeableChangesListener saves 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from mockMergeableChangesListener saves 2`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from mockMergeableContentListener autoLoads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4033596827,
]
`;

exports[`Persists to/from mockMergeableContentListener autoLoads 2`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  2,
                  2669080357,
                ],
              },
              274319047,
            ],
          },
          4089057354,
        ],
      },
      3386696034,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3386696034,
]
`;

exports[`Persists to/from mockMergeableContentListener autoLoads 3`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from mockMergeableContentListener autoLoads 4`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from mockMergeableContentListener autoSaves 1`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  2133326328,
]
`;

exports[`Persists to/from mockMergeableContentListener autoSaves 2`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1640274386,
            ],
          },
          1505695335,
        ],
      },
      2105713602,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  4073625505,
]
`;

exports[`Persists to/from mockMergeableContentListener autoSaves 3`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1640274386,
            ],
          },
          1505695335,
        ],
      },
      2105713602,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  4073625505,
]
`;

exports[`Persists to/from mockMergeableContentListener autoSaves 4`] = `
[
  "Hc2DO@200008DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1640274386,
            ],
          },
          1505695335,
        ],
      },
      2105713602,
    ],
    [
      "Hc2DO@200008DKS9",
      {
        "v1": [
          "Hc2DO@200008DKS9",
          2,
          1735757618,
        ],
      },
      1614015778,
    ],
  ],
  498159328,
]
`;

exports[`Persists to/from mockMergeableContentListener loads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from mockMergeableContentListener saves 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from mockMergeableContentListener saves 2`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoLoads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4033596827,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoLoads 2`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  2,
                  2669080357,
                ],
              },
              274319047,
            ],
          },
          4089057354,
        ],
      },
      3386696034,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3386696034,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoLoads 3`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoLoads 4`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoSaves 1`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  2133326328,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoSaves 2`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1640274386,
            ],
          },
          1505695335,
        ],
      },
      2105713602,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  4073625505,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoSaves 3`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1640274386,
            ],
          },
          1505695335,
        ],
      },
      2105713602,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  4073625505,
]
`;

exports[`Persists to/from mockMergeableNoContentListener autoSaves 4`] = `
[
  "Hc2DO@200008DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1640274386,
            ],
          },
          1505695335,
        ],
      },
      2105713602,
    ],
    [
      "Hc2DO@200008DKS9",
      {
        "v1": [
          "Hc2DO@200008DKS9",
          2,
          1735757618,
        ],
      },
      1614015778,
    ],
  ],
  498159328,
]
`;

exports[`Persists to/from mockMergeableNoContentListener loads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from mockMergeableNoContentListener saves 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from mockMergeableNoContentListener saves 2`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from sessionStorage autoLoads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4033596827,
]
`;

exports[`Persists to/from sessionStorage autoLoads 2`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000018DKS9",
      {
        "t1": [
          "Hc2DO@000018DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  2,
                  2669080357,
                ],
              },
              274319047,
            ],
          },
          4089057354,
        ],
      },
      3386696034,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3386696034,
]
`;

exports[`Persists to/from sessionStorage autoLoads 3`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from sessionStorage autoLoads 4`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          3704904231,
        ],
      },
      4008152259,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4008152259,
]
`;

exports[`Persists to/from sessionStorage autoSaves 1`] = `
[
  "Hc2DO@000018DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  2133326328,
]
`;

exports[`Persists to/from sessionStorage autoSaves 2`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1640274386,
            ],
          },
          1505695335,
        ],
      },
      2105713602,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  4073625505,
]
`;

exports[`Persists to/from sessionStorage autoSaves 3`] = `
[
  "Hc2DO@000028DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1640274386,
            ],
          },
          1505695335,
        ],
      },
      2105713602,
    ],
    [
      "Hc2DO@000018DKS9",
      {
        "v1": [
          "Hc2DO@000018DKS9",
          1,
          3207404266,
        ],
      },
      2404136035,
    ],
  ],
  4073625505,
]
`;

exports[`Persists to/from sessionStorage autoSaves 4`] = `
[
  "Hc2DO@200008DKS9",
  [
    [
      "Hc2DO@000028DKS9",
      {
        "t1": [
          "Hc2DO@000028DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  2,
                  1691812082,
                ],
              },
              1640274386,
            ],
          },
          1505695335,
        ],
      },
      2105713602,
    ],
    [
      "Hc2DO@200008DKS9",
      {
        "v1": [
          "Hc2DO@200008DKS9",
          2,
          1735757618,
        ],
      },
      1614015778,
    ],
  ],
  498159328,
]
`;

exports[`Persists to/from sessionStorage loads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from sessionStorage saves 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from sessionStorage saves 2`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from sync autoLoads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  4033596827,
]
`;

exports[`Persists to/from sync autoLoads 2`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000018DKS9",
              {
                "c1": [
                  "Hc2DO@000018DKS9",
                  2,
                  2669080357,
                ],
              },
              274319047,
            ],
          },
          3914027639,
        ],
      },
      2690343530,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  2690343530,
]
`;

exports[`Persists to/from sync autoLoads 3`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          1182151437,
        ],
      },
      3829615349,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3829615349,
]
`;

exports[`Persists to/from sync autoLoads 4`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000028DKS9",
              {
                "c1": [
                  "Hc2DO@000028DKS9",
                  3,
                  3252714811,
                ],
              },
              1416411412,
            ],
          },
          1182151437,
        ],
      },
      3829615349,
    ],
    [
      "",
      {},
      0,
    ],
  ],
  3829615349,
]
`;

exports[`Persists to/from sync autoSaves 1`] = `undefined`;

exports[`Persists to/from sync autoSaves 2`] = `undefined`;

exports[`Persists to/from sync autoSaves 3`] = `undefined`;

exports[`Persists to/from sync autoSaves 4`] = `undefined`;

exports[`Persists to/from sync loads 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from sync saves 1`] = `
[
  "Hc2DO@000008DKS9",
  [
    [
      "Hc2DO@000008DKS9",
      {
        "t1": [
          "Hc2DO@000008DKS9",
          {
            "r1": [
              "Hc2DO@000008DKS9",
              {
                "c1": [
                  "Hc2DO@000008DKS9",
                  1,
                  4065945599,
                ],
              },
              1279994494,
            ],
          },
          1293085726,
        ],
      },
      4033596827,
    ],
    [
      "Hc2DO@000008DKS9",
      {
        "v1": [
          "Hc2DO@000008DKS9",
          1,
          4065945599,
        ],
      },
      2304392760,
    ],
  ],
  2033316771,
]
`;

exports[`Persists to/from sync saves 2`] = `undefined`;

exports[`Supported, MergeableStore Changes in setPersisted 1`] = `
[
  "["Hc2DO@000008DKS9",[["Hc2DO@000008DKS9",{"t1":["Hc2DO@000008DKS9",{"r1":["Hc2DO@000008DKS9",{"c1":["Hc2DO@000008DKS9",1]}]}]}],["",{}]]]",
  "["Hc2DO@000018DKS9",[["",{}],["Hc2DO@000018DKS9",{"v1":["Hc2DO@000018DKS9",1]}]]]",
]
`;

exports[`Supported, MergeableStore Content in setPersisted 1`] = `"["Hc2DO@000008DKS9",[["Hc2DO@000008DKS9",{"t1":["Hc2DO@000008DKS9",{"r1":["Hc2DO@000008DKS9",{"c1":["Hc2DO@000008DKS9",1,4065945599]},1279994494]},1293085726]},4033596827],["Hc2DO@000008DKS9",{"v1":["Hc2DO@000008DKS9",1,4065945599]},2304392760]],2033316771]"`;

exports[`Supported, MergeableStore loading from legacy 1`] = `"["Hc2DO@000008DKS9",[["Hc2DO@000008DKS9",{"t1":["Hc2DO@000008DKS9",{"r1":["Hc2DO@000008DKS9",{"c1":["Hc2DO@000008DKS9",1,4065945599]},1279994494]},1293085726]},4033596827],["Hc2DO@000008DKS9",{"v1":["Hc2DO@000008DKS9",1,4065945599]},2304392760]],2033316771]"`;
